--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "classnames": "^2.3.2",
+    "jotai": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "lint": "eslint --ext .js,.ts,.tsx . ",
+    "lint:fix": "eslint --fix --ext .js,.ts,.tsx . "
   },
   "eslintConfig": {
     "extends": [
@@ -41,10 +42,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.45.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.4"
+    "vite": "^4.4.4",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
