--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^4.4.4",
+    "@vitejs/plugin-react": "^4.0.3",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
     "start": "vite",
@@ -43,14 +46,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.26",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.4",
-    "vite-plugin-eslint": "^1.8.1"
+    "tailwindcss": "^3.3.3"
   }
 }
