--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
     "classnames": "^2.3.2",
     "jotai": "^2.2.2",
     "react": "^18.2.0",
@@ -17,7 +19,6 @@
     "swr": "^2.2.0",
     "typescript": "^4.9.5",
     "vite": "^4.4.4",
-    "@vitejs/plugin-react": "^4.0.3",
     "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
