--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/forms": "^0.5.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "classnames": "^2.3.2",
+    "jest": "^29.6.1",
     "jotai": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
     "vite": "^4.4.4",
     "vite-plugin-eslint": "^1.8.1"
@@ -25,7 +26,9 @@
     "start": "vite",
     "build": "vite build",
     "lint": "eslint --ext .js,.ts,.tsx . ",
-    "lint:fix": "eslint --fix --ext .js,.ts,.tsx . "
+    "lint:fix": "eslint --fix --ext .js,.ts,.tsx . ",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -47,10 +50,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-environment-jsdom": "^29.6.1",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3"
   }
