--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
     "vite": "^4.4.4",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "@testing-library/user-event": "^14.4.3"
   },
   "scripts": {
     "start": "vite",
@@ -51,7 +52,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/dom": "^9.3.1",
-    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-react-app": "^7.0.1",
